--- a/Bionly/Bionly/Views/LiveviewPage.xaml
+++ b/Bionly/Bionly/Views/LiveviewPage.xaml
@@ -4,6 +4,7 @@
              x:Class="Bionly.Views.LiveviewPage"
              xmlns:vm="clr-namespace:Bionly.ViewModels"
              xmlns:vlc="clr-namespace:LibVLCSharp.Forms.Shared;assembly=LibVLCSharp.Forms"
+             xmlns:resx="clr-namespace:Bionly.Resx"
              Title="{Binding Title}">
 
     <ContentPage.BindingContext>
@@ -12,7 +13,7 @@
 
     <ContentPage.Content>
         <Grid>
-            <Label Text="Die Liveansicht ist unter Windows leider nicht verfügbar" VerticalOptions="Center" HorizontalOptions="Center" FontSize="Large">
+            <Label Text="{x:Static resx:Strings.NoLiveviewWin}" VerticalOptions="Center" HorizontalOptions="Center" FontSize="Large">
                 <Label.IsVisible>
                     <OnPlatform x:TypeArguments="x:Boolean" Default="False">
                         <On Platform="UWP" Value="True"/>
@@ -34,7 +35,7 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <Button x:Name="StopBtn" Grid.Row="0" Text="Video beenden" Clicked="StopButton_Clicked" Margin="5" IsEnabled="False"/>
+                    <Button x:Name="StopBtn" Grid.Row="0" Text="{x:Static resx:Strings.EndVideo}" Clicked="StopButton_Clicked" Margin="5" IsEnabled="False"/>
                     <ListView x:Name="DeviceList" Grid.Row="1" ItemsSource="{Binding Connections}" VerticalOptions="Start" HorizontalOptions="Start" SelectionMode="Single" ItemTapped="ListView_ItemTapped" WidthRequest="200">
                         <ListView.ItemTemplate>
                             <DataTemplate>
