--- a/Bionly/Bionly/AppShell.xaml
+++ b/Bionly/Bionly/AppShell.xaml
@@ -2,6 +2,7 @@
 <Shell xmlns="http://xamarin.com/schemas/2014/forms" 
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:local="clr-namespace:Bionly.Views"
+       xmlns:resx="clr-namespace:Bionly.Resx"
        Title="Bionly"
        x:Class="Bionly.AppShell" Navigating="Shell_Navigating">
 
@@ -78,24 +79,25 @@
         FlyoutDisplayOptions="AsMultipleItems" will create a separate flyout item for each child element    
         https://docs.microsoft.com/dotnet/api/xamarin.forms.shellgroupitem.flyoutdisplayoptions?view=xamarin-forms
     -->
-    <FlyoutItem Title="Dashboard" Icon="icon_Home.png">
+    <FlyoutItem Title="{x:Static resx:Strings.Dashboard}" Icon="icon_Home.png">
         <ShellContent Route="DashboardPage" ContentTemplate="{DataTemplate local:DashboardPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Liveansicht" Icon="icon_VideoCamera.png">
+    <FlyoutItem Title="{x:Static resx:Strings.Liveview}" Icon="icon_VideoCamera.png">
         <ShellContent Route="LiveviewPage" ContentTemplate="{DataTemplate local:LiveviewPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Diagramme" Icon="icon_Chart.png">
+    <FlyoutItem Title="{x:Static resx:Strings.Charts}" Icon="icon_Chart.png">
         <ShellContent Route="ChartsPage" ContentTemplate="{DataTemplate local:ChartsPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Einstellungen" Icon="icon_Settings.png">
+    <FlyoutItem Title="{x:Static resx:Strings.Settings}" Icon="icon_Settings.png">
         <ShellContent Route="SettingsPage" ContentTemplate="{DataTemplate local:SettingsPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Über" Icon="icon_Info.png">
+    <FlyoutItem Title="{x:Static resx:Strings.About}" Icon="icon_Info.png">
         <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
     </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
-    <MenuItem x:Name="AccBtn" Text="Abmelden" StyleClass="MenuItemLayoutStyle" IconImageSource="icon_logout.png" Clicked="AccBtn_Clicked"/>
+    <MenuItem x:Name="AccBtn" Text="{x:Static resx:Strings.Logout}" StyleClass="MenuItemLayoutStyle" IconImageSource="icon_logout.png" Clicked="AccBtn_Clicked"/>
+    <MenuItem x:Name="LangBtn" Text="{x:Static resx:Strings.Language}" StyleClass="MenuItemLayoutStyle" IconImageSource="icon_language.png" Clicked="LangBtn_Clicked"/>
 
     <!--
         TabBar lets you define content that won't show up in a flyout menu. When this content is active
