New icons, user can now switch languages

--- a/Bionly/Bionly/App.xaml
+++ b/Bionly/Bionly/App.xaml
@@ -7,7 +7,8 @@
     -->
     <Application.Resources>
         <ResourceDictionary>
-            <Color x:Key="Primary">#4A93D3</Color>
+            <Color x:Key="Primary">#4993D2</Color>
+            <Color x:Key="Secondary">#090F48</Color>
             <Style TargetType="Button">
                 <Setter Property="TextColor" Value="White"></Setter>
                 <Setter Property="VisualStateManager.VisualStateGroups">
