--- a/Bionly/Bionly/Views/ChartsPage.xaml
+++ b/Bionly/Bionly/Views/ChartsPage.xaml
@@ -11,7 +11,7 @@
     </ContentPage.BindingContext>
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="{x:Static resx:Strings.RedrawGraphics}" Command="{Binding DrawGraphs}"/>
+        <ToolbarItem Text="{x:Static resx:Strings.RedrawGraphics}" Command="{Binding DrawGraphs}" IconImageSource="icon_draw.png"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
